--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
-    "react-spring": "^8.0.27",
+    "react-transition-group": "^4.4.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
